--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#fffcf3" />
     <meta name="Quizard! The quizzing website" content="quizard!" />
+    <meta name="Description" content="Quizard is a quizzing website to make quizzes fun again." />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148744968-1"></script>
