--- a/web/public/index.html
+++ b/web/public/index.html
@@ -32,7 +32,7 @@
     -->
     <title>Quizard!</title>
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
