--- a/web/public/index.html
+++ b/web/public/index.html
@@ -34,7 +34,7 @@
     -->
     <title>Quizard!</title>
   </head>
-  <body style="overflow: hidden;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
